Basis styles for lists in the list view.

--- a/src/List.module.css
+++ b/src/List.module.css
@@ -3,3 +3,9 @@
   display: flex;
   align-items: center;
 }
+.name_wrapper {
+  width: stretch;
+  height: stretch;
+  display: flex;
+  align-items: center;
+}
