--- a/src/todoListItem/TodoItem.module.css
+++ b/src/todoListItem/TodoItem.module.css
@@ -1,4 +1,3 @@
-
 .todoItem {
   display: flex;
   flex-direction: column;
@@ -7,6 +6,20 @@
   margin: 0  auto 1rem;
   padding: 1rem;
   background: #FFFFFF;
+  border-left: 0.4rem solid transparent;
+}
+
+/* Todo list item priority colors */
+.low {
+  border-color: #3465a4;
+}
+
+.medium {
+  border-color: #f57900;
+}
+
+.high {
+  border-color: #cc0000;
 }
 
 .name {
@@ -28,6 +41,7 @@
   height: 34px;
   outline: none;
   border: none;
+  width: stretch;
 }
 .dragIcon {
   background: none;
@@ -87,3 +101,5 @@
   right: 0;
   bottom: 0;
 }
+
+
