--- a/src/todoListItem/TodoItemsMenu.module.css
+++ b/src/todoListItem/TodoItemsMenu.module.css
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem;
+  margin-bottom: 0.5rem;
 }
 .header_menu button {
   background: #40403c;
@@ -13,8 +14,5 @@
   border-radius: 0.3rem;
 }
 .header_menu button:focus {
-  outline: none;
-}
-.header_menu button:hover {
   outline: none;
 }
