--- a/src/common/Popover.module.css
+++ b/src/common/Popover.module.css
@@ -20,9 +20,7 @@
   background: #e7e5e3;
   padding: 1rem;
 }
+.children input,
 .children label {
-  margin-bottom: 1rem;
-}
-.children input {
   margin-bottom: 1rem;
 }
