--- a/src/todoList/Lists.module.css
+++ b/src/todoList/Lists.module.css
@@ -3,3 +3,9 @@
   list-style: none;
   padding: 0;
 }
+.user_lists li {
+  border-bottom: 1px solid #f2f1f0;
+}
+.user_lists li:last-child {
+  border-bottom: none;
+}
