WIP: Created a tab-like display which shows lists, tasks due today, and scheduled tasks.  Menubar is serving the purpose of selecting which to display, it allows for adding controls to the left or right of tabs—depending of the controls needed in each.  For example, you only can create a new list on the lists view.

--- a/src/ToDo.css
+++ b/src/ToDo.css
@@ -9,6 +9,10 @@ input[type=text]:focus::placeholder {
   color: transparent;
 }
 
+li {
+  list-style: none;
+}
+
 .actions {
   display: grid;
   grid-gap: 1rem;
