--- a/src/common/MenuBar.module.css
+++ b/src/common/MenuBar.module.css
@@ -5,8 +5,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem;
+  margin-bottom: 1rem;
 }
-.main_menu > div {
+.main_menu div {
   display: flex;
 }
 .main_menu button {
@@ -23,4 +24,7 @@
 }
 .new_list_name {
   position: absolute;
+}
+.center {
+  justify-content: center;
 }
