Temporary fix for styling of new list form, it allows for the new list button to be full-sized in the menubar and for the new list form to display as intended.

--- a/src/common/MenuBar.module.css
+++ b/src/common/MenuBar.module.css
@@ -7,7 +7,8 @@
   grid-gap: 1rem;
   margin-bottom: 1rem;
 }
-.main_menu div {
+.main_menu > div,
+.main_menu > div > div {
   display: flex;
 }
 .main_menu button {
