These changes are an attempt to refactor the code to be more flexible.  With the decision to try using context many files have been modified.

--- a/src/ToDo.css
+++ b/src/ToDo.css
@@ -9,6 +9,11 @@ input[type=text]:focus::placeholder {
   color: transparent;
 }
 
+ol {
+  margin: 0;
+  padding: 0
+}
+
 li {
   list-style: none;
 }
