--- a/src/task/CreateTodoItem.module.css
+++ b/src/task/CreateTodoItem.module.css
@@ -1,18 +1,19 @@
 .createTodoItem {
   height: 64px;
-  overflow: hidden;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  width: stretch;
   max-width: 700px;
   background: #FFFFFF;
-  margin: 0 auto 1rem;
+  margin: 1rem auto 1rem;
   border-left: 0.4rem solid transparent;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .createTodoItem input {
+  height: stretch;
   outline: none;
   border: none;
 }
