--- a/src/ToDo.css
+++ b/src/ToDo.css
@@ -1,6 +1,28 @@
 html {
   box-sizing: border-box;
 }
+
+body {
+  position: relative;
+  height: stretch;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.full_height {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
