--- a/src/list/Lists.module.css
+++ b/src/list/Lists.module.css
@@ -2,6 +2,10 @@
   background: #FFFFFF;
   list-style: none;
   padding: 0;
+  margin: 0;
+  height: stretch;
+  display: flex;
+  flex-direction: column;
 }
 .user_lists li {
   border-bottom: 1px solid #f2f1f0;
