WIP:  These changes bring functionality which allow for multiple displays for lists.  Lists can be displayed as a listing or as a grid.  Search filtering works in both view modes; but not in selection modes.  It's become clear restructuring existing code is necessary—everything is a bit to hard to think about.

--- a/src/common/Icons.module.css
+++ b/src/common/Icons.module.css
@@ -3,5 +3,12 @@
 }
 .icon {
   height: stretch;
-  position: absolute;
+  position: relative;
+  min-width: 1rem;
+}
+.icon path {
+  fill: #b6b3ab;
+}
+.icon svg {
+  min-width: 1rem;
 }
