--- a/src/list/Lists.module.css
+++ b/src/list/Lists.module.css
@@ -14,3 +14,36 @@
 .user_lists li:last-child {
   border-bottom: none;
 }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-column-gap: 4rem;
+  grid-row-gap: 4rem;
+  padding: 1rem 5rem;
+  background: #f2f1f0;
+  height: stretch;
+}
+.grid_item {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+}
+
+.grid_item .color_code {
+  position: relative;
+  flex-grow: 1;
+  box-shadow:
+    inset 0 -3em 3em rgba(0,0,0,0.1),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+.grid_item .list_name {
+  align-self: center;
+  margin-top: 1rem; 
+}
+.grid_item .selected:after {
+    content: "\2714";
+    font-size: x-large;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
