Adjusted styles to work with Mozilla.

--- a/src/common/ColorPicker.module.css
+++ b/src/common/ColorPicker.module.css
@@ -2,8 +2,8 @@
   position: relative;
 }
 .color {
-  width: 36px;
-  height: stretch;
+  width: 2.4rem;
+  height: 100%;
   border-radius: 2px;
   max-height: 100%;
 }
