--- a/src/common/Icons.module.css
+++ b/src/common/Icons.module.css
@@ -1,14 +1,13 @@
-.wrapper {
-  position: relative;
-}
 .icon {
-  height: stretch;
-  position: relative;
-  min-width: 1rem;
+  min-width:1rem;
+  width: 100%;
+  height: 100%;
 }
 .icon path {
   fill: #b6b3ab;
 }
 .icon svg {
-  min-width: 1rem;
+  max-width: 1rem;
+  height: 100%;
+  width: 100%;
 }
