--- a/src/task/CreateTodoItem.module.css
+++ b/src/task/CreateTodoItem.module.css
@@ -4,16 +4,18 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: stretch;
+  width: 100%;
   max-width: 700px;
   background: #FFFFFF;
   margin: 1rem auto 1rem;
   border-left: 0.4rem solid transparent;
   padding: 0 1rem;
+  box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
 }
 
 .createTodoItem input {
-  height: stretch;
+  height: 100%;
+  width: 100%;
   outline: none;
   border: none;
 }
