--- a/src/common/MenuBar.module.css
+++ b/src/common/MenuBar.module.css
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem;
+  min-height: 2rem;
 }
 .main_menu > div,
 .main_menu > div > div {
